# window_verify

./: index.html  index.js  index.ts  package.json  path.js  tsconfig.tsbuildinfo
backend/: pyproject.toml
frontend/: index.html  index.ts  package.json  path.ts  tsconfig.json
