[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sebastian Larson <sebastianlarson22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.24.0"
fastapi = "^0.104.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
